# snail_game

./: .gitignore  pyproject.toml
snail_game/: app.py  constants.py  helpers.py  obstacle.py  player.py
